--- a/api/Pipfile
+++ b/api/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
+pyjwt = "*"
 sqlalchemy = "*"
 bcrypt = "*"
-pyjwt = "*"
+flask = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
